<resources>
    <string name="app_name">資料申請</string>
    <string name="main_name">牵手关心</string>
    <string name="identifying">正在识别…</string>
    <string name="album">相册</string>
    <string name="cash_tishi">很抱歉!程序出现异常退出!</string>
    <string name="network_error">网络开小差了,请检查网络</string>
    <string name="no_more">暂无更多数据</string>
    <string name="sdcard_is_null">找不到该设备SD卡!</string>
    <string name="local_album">本地相册</string>
    <string name="new_photo">拍照</string>
    <string name="select_photo">从手机相册选择</string>
    <string name="cancel">取消</string>
    <string name="sure">确定</string>
    <string name="scan_code">扫码</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_print_data">PrintDataActivity</string>
    <string name="person_count">人数</string>
    <string name="decode_null">未发现二维码/条形码</string>
    <string name="Alignment_code">对准二维码/条形码</string>
    <string name="request_timeout">请求超时</string>
    <string name="internal_server_error">请求服务器异常</string>
    <string name="back">返回</string>
    <string name="shen">省份</string>
    <string name="shi">城市</string>
    <string name="qu">区域</string>
    <string name="dian">门店</string>
    <string name="count">账号</string>
    <string name="message">消息</string>
    <string name="yeu">月</string>
    <string name="riis">日</string>
    <string name="yues">00月</string>
    <string name="years">0000年</string>
    <string name="ris">00日</string>
    <string name="qingshurusjh">请输入手机号</string>
    <string name="jingshuryzm">请输入验证码</string>
    <string name="shoujigesibzq">手机号码格式不正确</string>
    <string name="mimanull">密码不能为空</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="chongxinhuoqu">重新获取</string>
    <string name="schongxinhuoqu">s重新获取</string>
    <string name="press_right_top">按右上的  </string>
    <string name="add_alarm_clock">  添加闹钟  </string>
    <string name="retrieve_alarm_clock_success">被删除的闹钟已成功找回</string>
    <!-- 新建编辑闹钟界面 -->
    <string name="new_alarm_clock">新建闹钟</string>
    <string name="edit_alarm_clock">编辑闹钟</string>
    <string name="repeat">重复</string>
    <string name="tag">标签</string>
    <string name="ring">铃声</string>
    <string name="default_ring">默认铃声</string>

    <string name="volume">音量</string>
    <string name="vibrate">振动</string>
    <string name="check_version">当前已经是最新版本</string>
    <string name="check_versions">有最新版本，快去更新吧</string>
    <string name="yihougx">以后更新</string>
    <string name="qugenx">去更新</string>
    <string name="wozhidol">我知道了</string>



    <string name="title_activity_setp6">資料申請</string>
    <string name="next">下一步</string>
    <string name="text_null">內容為空</string>

    <!-- 個人資料 -->
    <string name="personal_data">個人資料</string>
    <string name="cn_name">中文姓名*</string>
    <string name="en_name">英文姓名*</string>
    <string name="cd_num">身份證號碼*</string>
    <string name="date">出身年月*</string>
    <string name="age">年齡*</string>
    <string name="house_address">住址*</string>
    <string name="house_type">住宅類型</string>
    <string name="house_tel">住宅電話</string>
    <string name="house_date">居住年期</string>

    <!-- 工作資料 -->
    <string name="work_data">工作資料</string>
    <string name="position">職位*</string>
    <string name="seniority">年資*</string>
    <string name="cp_name">公司名稱*</string>
    <string name="cp_address">公司地址*</string>
    <string name="cp_tel">公司電話</string>
    <string name="month_pay">每月薪金</string>
    <string name="out_type">出糧方式</string>

    <!-- 同住人資料 -->
    <string name="cb_data">同住人資料</string>
    <string name="cb_name">姓名*</string>
    <string name="cb_tel">手提電話*</string>
    <string name="cb_relationship">關係*</string>
    <string name="cb_job">職業*</string>

    <!-- 非同住人親戚咨詢人資料 -->
    <string name="re_data">非同住人親戚咨詢人資料</string>
    <string name="re_name">姓名*</string>
    <string name="re_tel">手提電話*</string>
    <string name="re_relationship">關係*</string>
    <string name="re_job">職業*</string>

    <!-- 照片信息 -->
    <string name="photo_cd">身份證照片*</string>
    <string name="photo_card">手持身份證影上半身照片*</string>
    <string name="photo_in">入息證明照片*</string>
    <string name="photo_address">住址證明照片*</string>

    <item name="visible" type="id" />
    <item name="masked" type="id" />
</resources>
